--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ button:disabled {
 /* SVG list styling */
 #svgList {
   width: 100%;
-  max-width: 800px;
+  max-width: none
   list-style: none;
   margin-bottom: 1rem;
 }
